--- a/lab-intro-probability.ipynb
+++ b/lab-intro-probability.ipynb
@@ -98,6 +98,7 @@
    "metadata": {},
    "source": [
     "Consider a scenario related to Ironhack website traffic. Where:\n",
+    "- our website takes on average 500 visits per hour.\n",
     "- the website's server is designed to handle up to 1200 vists per hour.\n",
     "\n",
     "\n",
@@ -117,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the probability of being overwhelmed at some point during a day?"
+    "What is the probability of being overwhelmed at some point during a day? (consider 24hours)"
    ]
   },
   {
