--- a/lab-intro-probability.ipynb
+++ b/lab-intro-probability.ipynb
@@ -38,11 +38,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that Ironhack Airlines has seats for all passengers is 0.8845\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "#code here\n",
+    "from scipy.stats import binom\n",
+    "\n",
+    "n = 460  \n",
+    "p = 0.03  \n",
+    "seats_available = 450\n",
+    "\n",
+    "\n",
+    "p_showing_up = 1 - p\n",
+    "\n",
+    "# Create binomial distribution\n",
+    "binom_dist = binom(n, p_showing_up)\n",
+    "\n",
+    "\n",
+    "probability = binom_dist.cdf(seats_available)\n",
+    "\n",
+    "print(f\"The probability that Ironhack Airlines has seats for all passengers is {probability:.4f}\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -72,11 +98,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that the representative needs to make at least three attempts before successfully resolving a customer complaint is 0.14699999999999996\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "#code here\n",
+    "from scipy.stats import geom\n",
+    "\n",
+    "p = 0.30\n",
+    "geom_dist = geom(p)\n",
+    "\n",
+    "print(f\"The probability that the representative needs to make at least three attempts before successfully resolving a customer complaint is {geom_dist.pmf(3)}\")"
    ]
   },
   {
@@ -107,11 +147,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability of the website server being overwhelmed is 0.01289822084039205\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "#code here\n",
+    "from scipy.stats import poisson\n",
+    "\n",
+    "mu = 500\n",
+    "poisson_dist = poisson(mu)\n",
+    "\n",
+    "probability_overwhelmed = 1 - poisson_dist.cdf(550)\n",
+    "\n",
+    "print(f\"The probability of the website server being overwhelmed is {probability_overwhelmed}\")\n"
    ]
   },
   {
@@ -123,11 +179,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability of the server being overwhelmed at least once during a 24-hour period is 0.2677\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "probability_overwhelmed_per_hour = probability_overwhelmed\n",
+    "\n",
+    "# Calculate the probability of not being overwhelmed in one hour\n",
+    "probability_not_overwhelmed_per_hour = 1 - probability_overwhelmed_per_hour\n",
+    "\n",
+    "# Calculate the probability of not being overwhelmed in 24 hours\n",
+    "probability_not_overwhelmed_24_hours = probability_not_overwhelmed_per_hour ** 24\n",
+    "\n",
+    "# Calculate the probability of being overwhelmed at least once in 24 hours\n",
+    "probability_overwhelmed_24_hours = 1 - probability_not_overwhelmed_24_hours\n",
+    "\n",
+    "print(f\"The probability of the server being overwhelmed at least once during a 24-hour period is {probability_overwhelmed_24_hours:.4f}\")"
    ]
   },
   {
@@ -157,10 +232,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that the next customer will arrive within the next 5 minutes is 0.3935\n"
+     ]
+    }
+   ],
+   "source": [
+    "# code here\n",
+    "from scipy.stats import expon\n",
+    "\n",
+    "#the parameter represents the rate of events occuring per unit of time\n",
+    "lambda_value = 0.1\n",
+    "\n",
+    "lambda_inv = expon(scale = 1/lambda_value)\n",
+    "\n",
+    "lambda_inv.cdf(5)\n",
+    "print(f\"The probability that the next customer will arrive within the next 5 minutes is {lambda_inv.cdf(5):.4f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -173,10 +267,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that an employee can take a 5-minute break after no customer arrivals for 15 minutes is 0.2231\n"
+     ]
+    }
+   ],
+   "source": [
+    "exp_dist = expon(scale=1/lambda_value)\n",
+    "\n",
+    "# Calculate the probability of having no arrivals in a 15-minute interval\n",
+    "prob_no_arrivals_15_min = 1 - exp_dist.cdf(15) \n",
+    "\n",
+    "# Probability of a 5-minute break within that 15-minute interval\n",
+    "# Here we assume if there are no arrivals in 15 minutes, the probability of a 5-minute break within that interval is 1\n",
+    "probability_break = prob_no_arrivals_15_min\n",
+    "\n",
+    "print(f\"The probability that an employee can take a 5-minute break after no customer arrivals for 15 minutes is {probability_break:.4f}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -196,11 +309,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that its weight is between 140 and 160 grams is 0.6826894921370859\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "#code here\n",
+    "from scipy.stats import norm\n",
+    "\n",
+    "mean = 150\n",
+    "std = 10\n",
+    "\n",
+    "norm_dist = norm(loc = mean, scale = std)\n",
+    "print(f\"The probability that its weight is between 140 and 160 grams is {norm_dist.cdf(160) - norm_dist.cdf(140)}\")"
    ]
   },
   {
@@ -219,11 +347,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that the component fails within the first 30 hours is 0.4512\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "#code here\n",
+    "\n",
+    "mean = 50\n",
+    "lambda_value = 1 / mean\n",
+    "time_period = 30  \n",
+    "\n",
+    "# Create the exponential distribution object\n",
+    "exp_dist = expon(scale=1/lambda_value)\n",
+    "\n",
+    "# Calculate the probability of failing within the first 30 hours\n",
+    "prob_failure_within_30_hours = exp_dist.cdf(time_period)\n",
+    "\n",
+    "print(f\"The probability that the component fails within the first 30 hours is {prob_failure_within_30_hours:.4f}\")\n"
    ]
   }
  ],
@@ -243,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
